--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: "Segoe UI", sans-serif;
   background: #c5bdbd;
   display: flex;
   justify-content: center;
@@ -20,14 +19,16 @@ body {
 .clock {
   position: relative;
   width: 100%;
-  padding-top: 100%; 
-  background: url('clock.png') no-repeat center;
+  padding-top: 100%;
+  background: url("clock.png") no-repeat center;
   background-size: cover;
   border-radius: 50%;
   margin: 0 auto;
 }
 
-.hour, .minute, .second {
+.hour,
+.minute,
+.second {
   position: absolute;
   width: 1.3%;
   background: black;
@@ -68,7 +69,6 @@ body {
   margin-top: 0.5rem;
 }
 
-/* Responsive Typography */
 @media (max-width: 500px) {
   .digital {
     font-size: 1.5rem;
@@ -78,7 +78,9 @@ body {
     font-size: 0.9rem;
   }
 
-  .hour, .minute, .second {
+  .hour,
+  .minute,
+  .second {
     width: 1.5%;
   }
 }
